Fixed body overflow

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -20,6 +20,10 @@ $colors: (
 @import '~bulma';
 @import '~buefy/src/scss/buefy';
 
+body {
+  overflow-x: hidden;
+}
+
 #app {
   display: flex;
   flex-direction: column;
